mdt_cli/tests/snapshots/update__update_multiline_idempotent_after_write__first_stdout.snap
---
source: mdt_cli/tests/update.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmp5TKusb
    - update
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Updated 1 block(s) in 1 file(s).

----- stderr -----
