mdt_cli/tests/snapshots/update__update_multiline_idempotent_after_write__readme_md.snap
---
source: mdt_cli/tests/update.rs
expression: after_first.as_str()
---
<!-- {=links} -->

[repo]: https://github.com/example/repo
[docs]: https://docs.example.com
[ci]: https://ci.example.com/badge.svg

<!-- {/links} -->
